--- a/views/src/index.css
+++ b/views/src/index.css
@@ -1,13 +1,284 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.topnav {
+  background-color:#CBE4DE;
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #073a27;
+  text-align: center;
+  padding: 24px 26px;
+  text-decoration: none;
+  font-size: px;
+  font-size: large;
+}
+
+
+.topnav a:hover {
+  background-color:#8EC3B0;
+  color: #2D033B;
+}
+
+ 
+.topnav .icon {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+span:active{
+  background-color: #ddd;
+  color: black;
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+.main{
+  width:100%;
+  height: 89.7vh;
+  padding:0;
+  margin:0px;
+  background-color: #CBE4DE;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.Rmain{
+  width:100%;
+  height: 89.7vh;
+  padding:0;
+  margin:0px;
+  background-color: #CBE4DE;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:30%;
+  height:65vh;
+  border:1px solid #3333331e ;
+  background-color: #8EC3B0;
+  color:white;
+
+}
+.Rbox{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:35%;
+  height:72vh;
+  border:1px solid #3333331e ;
+  background-color: #8EC3B0;
+  color:white;
+
+}
+div.box > input{
+  margin:20px;
+  width:80%;
+  height:7vh;
+  text-align: center;
+}
+ Link{
+  text-decoration: none;
+}
+div.Rbox > input{
+  margin:20px;
+  width:80%;
+  height:7vh;
+  text-align: center;
+}
+div.box > span {
+  margin:20px;
+  width:60%;
+  height:7vh;
+  background-color: #333333a1;
+}
+div.Rbox > span {
+  margin:20px;
+  width:60%;
+  height:7vh;
+  background-color: #333333a1;
+}
+div.box > span button{
+ 
+  width:100%;
+  height:7vh;
+  border:none;
+  cursor: pointer;
+  background-color: #15694b;
+  color:white;
+  font-size: 18px;
+}
+div.Rbox > span button{
+ 
+  width:100%;
+  height:7vh;
+  border:none;
+  cursor: pointer;
+  background-color: #15694b;
+  color:white;
+  font-size: 18px;
+}
+div.box > p a{
+  color:blue;
+}
+div.box > h1{
+  color:#073a27;
+}
+div.Rbox > h1{
+  color:#073a27;
+}
+.heading{
+  text-align: center;
+ margin: 0 20%;
+   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
+  color:#073a27;
+  line-height: 80%;
+}
+.success {
+  border: none; /* Remove borders */
+  color: white; /* Add a text color */
+  padding: 14px 28px; /* Add some padding */
+  cursor: pointer; /* Add a pointer cursor on mouse-over */
+  background-color: #8EC3B0;
+  padding: 10px;
+  width:200px;
+  height:60px;
+  font-size: 20px;
+}
+.success:hover{
+  background-color: #ddd;
+  color: black;
+}
+select{
+  width:25%;
+  height:50px;
+  
+}
+.select{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  
+  
+  
+}
+.student{
+  color:white;
+}
+select{
+  background-color: #073a27;
+  color:white;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.course{
+  text-align: center;
+  margin: 30px;
+}
+/* .table{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ margin-top:50px;
+ flex-direction: row; 
+
+} */
+
+.row{
+  border-bottom:1px solid black;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  
+}
+/* table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 80%;
+  border: 1px solid #ddd;
+  
+} */
+.table {
+  display: flex; /* Add this line */
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  flex-direction: column;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+  text-align: center;
+  color:#073a27;
+  font-size: 10px;
+}
+ tr td {
+ 
+  padding: 20px;
+  color:#073a27;
+  vertical-align: middle;
+ 
+  
+}
+td:last-child {
+  border-right: none;
+  
+}
+tr{
+  width:18%;
+  color:#073a27;
+  text-align: center;
+  font-size: 20px;
+
+}
+
+tr:nth-child(even) {
+  background-color: #8EC3B0;
+}
+tr:nth-child(odd) {
+  background-color: #8ec3b08b;
+}
+hr{
+  padding:0px;
+  margin:0px;
 }
